--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "object-path": "^0.11.8",
     "postcss": "^8.4.14",
     "postcss-normalize": "^10.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.2",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
@@ -26,10 +26,15 @@
     "sass": "^1.54.5",
     "typescript": "^4.7.4"
   },
+  "devDependencies": {
+    "jest": "^29.6.1",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
