--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "ajv": "^8.11.0",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.2.6",
     "moment": "^2.29.4",
     "node-forge": ">=1.3.0",
@@ -18,18 +19,22 @@
     "postcss": "^8.4.14",
     "postcss-normalize": "^10.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.4.2",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
-    "sass": "^1.54.5",
-    "typescript": "^4.7.4"
+    "react-tsparticles": "^2.12.2",
+    "sass": "^1.54.5"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
+    "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0"
+    "jest": "^25.0.0",
+    "typescript": "^3.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
