--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.0",
-    "@mui/material": "^6.0.0",
+    "@mui/material": "^6.1.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
@@ -28,8 +28,10 @@
     "react-router-dom": "^6.26.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
     "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
