--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.1.3",
     "@testing-library/dom": "^10.4.0",
