--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - feature/newsite  # Change this to your desired branch
   pull_request:
     branches:
-      - main
+      - feature/newsite  # Change this to your desired branch
 
 jobs:
   build:
@@ -19,13 +19,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '16'  # This can still be used if you need Node.js for testing or deployment, otherwise remove
 
       - name: Install dependencies
-        run: npm install
+        run: npm install  # Only necessary if you have some dependencies
 
       - name: Run tests
-        run: npm test -- --coverage
+        run: npm test -- --coverage  # If you have JavaScript tests, else remove this step
 
       - name: Build project
-        run: npm run build
+        run: echo "No build step needed"  # This step is just a placeholder since no build is needed for plain HTML/JS
